tempfile/auto_impl/tests/compile-fail/value_self_for_mutable_ref.rs
use auto_impl::auto_impl;


#[auto_impl(&mut)]
trait Foo {
    fn foo(self);
}


fn main() {}
